--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "mongoose": "~4.4.10"
+    "mongoose": "~4.4.15",
+    "passport": "~0.3.2",
+    "passport-local": "~1.0.0",
+    "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "~0.1.1",
+    "express-session": "~1.13.0"
   }
 }
