--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "mongoose": "~4.4.10"
+    "mongoose": "~4.4.10",
+    "nodemailer": "~2.4.1",
   }
 }
