--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "mongoose": "~4.4.10",
-    "nodemailer": "~2.4.1",
+    "nodemailer": "~2.4.1"
   }
 }
