--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "mongoose": "~4.4.10",
-    "nodemailer": "~2.4.1"
+    "nodemailer": "~2.4.1",
+    "passport" : "~0.1.17",
+    "passport-local" : "~0.1.6",
+    "connect-flash" : "~0.1.1",
+    "bcrypt-nodejs" : "latest",
+    "method-override": "~2.3.6",
+    "express-session": "~1.0.0"
   }
 }
