--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-flash" : "~0.1.1",
     "bcrypt-nodejs" : "latest",
     "method-override": "~2.3.6",
-    "express-session": "~1.0.0"
+    "express-session": "~1.0.0",
+    "exceljs": "~0.2.8"
   }
 }
